# Image_Redactor

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.test  Image_Redactor.sln  Image_Redactor.vcxproj  Image_Redactor.vcxproj.filters  README.md  TODO  build_and_run.bat  build_and_run.sh  install_qt6.ps1  install_qt6_and_build.bat  main.cpp  packages.config
.github/workflows/: ci.yml
include/: Controller.h  GUI.h  Image.h
src/: Controller.cpp  GUI.cpp  Image.cpp
tests/: main_test.cpp
